...
    
    @IBOutlet weak private var backButton: UIButton!
   
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        backButton.isAccessibilityElement = true
        backButton.accessibilityIdentifier = "Back button"
    }
    
    //MARK: viewDidLoad
    override func viewDidLoad() {
        super.viewDidLoad()
        setFullImage()
...
